cluster/country-backend/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcomp-country-backend
  namespace: cloudcomputing
  labels:
    app: cloudcomp-country-backend
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: cloudcomp-country-backend
