cluster/country-backend/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: country-backend
  namespace: cloudcomputing
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`schwap.kainzinger.guldner.eu`) && PathPrefix(`/country`)
    services:
    - name: cloudcomp-country-backend
      scheme: http
      port: 8081
    middlewares:
    - name: stripprefix
  tls:
    secretName: schwap.kainzinger.guldner.eu
